--- a/view/adminhtml/layout/preview_email_index_view.xml
+++ b/view/adminhtml/layout/preview_email_index_view.xml
@@ -2,6 +2,10 @@
 
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="admin-1column"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <head>
+        <title>Form preview template</title>
+        <css src="Overdose_PreviewEmail::css/_form.css"/>
+    </head>
     <body>
         <referenceContainer name="content">
             <block class="Overdose\PreviewEmail\Block\Adminhtml\View\Element\Form" name="template_form"
