Code Refactoring, Added Search Result Interfaces [https://www.wrike.com/open.htm?id=747880390]

--- a/view/adminhtml/layout/preview_email_index_preview.xml
+++ b/view/adminhtml/layout/preview_email_index_preview.xml
@@ -4,10 +4,8 @@
         <referenceBlock name="menu.wrapper" remove="true"/>
         <referenceContainer name="header.inner.right" remove="true"/>
         <referenceContainer name="content">
-            <block class="Magento\Framework\View\Element\Template" name="page.block"
-                   template="Overdose_PreviewEmail::preview.phtml">
-                <block class="Overdose\PreviewEmail\Block\Adminhtml\View\Element\TemplateEmail"
-                       name="email.template.content" as="email.template.content"/>
+            <block class="Magento\Framework\View\Element\Template" name="page.block" template="Overdose_PreviewEmail::preview.phtml">
+                <block class="Overdose\PreviewEmail\Block\Adminhtml\View\Element\TemplateEmail" name="email.template.content" as="email.template.content"/>
             </block>
         </referenceContainer>
     </body>
