--- a/view/adminhtml/templates/preview.phtml
+++ b/view/adminhtml/templates/preview.phtml
@@ -1,8 +1,10 @@
 <?php
+use Magento\Email\Block\Adminhtml\Template\Preview;
 
-/* @var $block Preview */
+/* @var Preview $block */
 
-use Magento\Email\Block\Adminhtml\Template\Preview; ?>
+?>
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html lang="en">
 <head>
