Fixed Order Confirmation Email Template Issues, Created Shipment Confirmation & Credit Memo Email Templates Previews

--- a/view/adminhtml/templates/form.phtml
+++ b/view/adminhtml/templates/form.phtml
@@ -4,12 +4,34 @@
 
 <div class="button-column">
     <form class="form_template admin__fieldset form-inline" action="<?= $block->escapeHtmlAttr($this->getUrl('preview_email/index/preview')) ?>" method="GET" id="form_template">
-        <?php if ($block->getOptionType() === 'order' || $block->getOptionType() === 'invoice' || $block->getOptionType() === 'shipment'): ?>
+        <?php if ($block->getOptionType() === 'order' || $block->getOptionType() === 'invoice'): ?>
             <p class="select_name"><?= $block->escapeHtml(__('Order ID')) ?></p>
             <select name="order_id" class="order_id admin__control-select">
                 <option disabled selected><?= $block->escapeHtml(__('Select Order ID')) ?></option>
                 <?php foreach ($block->getOrderIds() as $order): ?>
                     <option value="<?= $block->escapeHtmlAttr($order) ?>"><?= $block->escapeHtml($order) ?></option>
+                <?php endforeach; ?>
+            </select>
+        <?php elseif ($block->getOptionType() === 'shipment'): ?>
+            <p class="select_name"><?= $block->escapeHtml(__('Order ID')) ?></p>
+            <select name="order_id" class="order_id admin__control-select">
+                <option disabled selected><?= $block->escapeHtml(__('Select Order ID')) ?></option>
+                <?php /** @var \Magento\Sales\Model\Order $order */  ?>
+                <?php foreach ($block->getOrders() as $order): ?>
+                    <?php if($order->hasShipments()): ?>
+                        <option value="<?= $block->escapeHtmlAttr($order->getIncrementId()) ?>"><?= $block->escapeHtml($order->getIncrementId()) ?></option>
+                    <?php endif; ?>
+                <?php endforeach; ?>
+            </select>
+        <?php elseif ($block->getOptionType() === 'creditmemo'): ?>
+            <p class="select_name"><?= $block->escapeHtml(__('Order ID')) ?></p>
+            <select name="creditmemo_id" class="creditmemo_id admin__control-select">
+                <option disabled selected><?= $block->escapeHtml(__('Select Order ID')) ?></option>
+                <?php /** @var \Magento\Sales\Model\Order $order */  ?>
+                <?php foreach ($block->getOrders() as $order): ?>
+                    <?php if($order->hasCreditmemos()): ?>
+                        <option value="<?= $block->escapeHtmlAttr($order->getIncrementId()) ?>"><?= $block->escapeHtml($order->getIncrementId()) ?></option>
+                    <?php endif; ?>
                 <?php endforeach; ?>
             </select>
         <?php endif; ?>
