--- a/view/adminhtml/templates/form.phtml
+++ b/view/adminhtml/templates/form.phtml
@@ -4,12 +4,23 @@
 
 <div class="button-column">
     <form class="form_template admin__fieldset form-inline" action="<?= $block->escapeHtmlAttr($this->getUrl('preview_email/index/preview')) ?>" method="GET" id="form_template">
-        <?php if ($block->getOptionType() === 'order' || $block->getOptionType() === 'invoice'): ?>
+        <?php if ($block->getOptionType() === 'order'): ?>
             <p class="select_name"><?= $block->escapeHtml(__('Order ID')) ?></p>
             <select name="order_id" class="order_id admin__control-select">
                 <option disabled selected><?= $block->escapeHtml(__('Select Order ID')) ?></option>
                 <?php foreach ($block->getOrderIds() as $order): ?>
                     <option value="<?= $block->escapeHtmlAttr($order) ?>"><?= $block->escapeHtml($order) ?></option>
+                <?php endforeach; ?>
+            </select>
+        <?php elseif ($block->getOptionType() === 'invoice'): ?>
+            <p class="select_name"><?= $block->escapeHtml(__('Order ID')) ?></p>
+            <select name="order_id" class="order_id admin__control-select">
+                <option disabled selected><?= $block->escapeHtml(__('Select Order ID')) ?></option>
+                <?php /** @var \Magento\Sales\Model\Order $order */  ?>
+                <?php foreach ($block->getOrders() as $order): ?>
+                    <?php if($order->hasInvoices()): ?>
+                        <option value="<?= $block->escapeHtmlAttr($order->getIncrementId()) ?>"><?= $block->escapeHtml($order->getIncrementId()) ?></option>
+                    <?php endif; ?>
                 <?php endforeach; ?>
             </select>
         <?php elseif ($block->getOptionType() === 'shipment'): ?>
@@ -38,6 +49,14 @@
         <?php if ($block->getOptionType() === 'customer'): ?>
             <p class="select_name"><?= $block->escapeHtml(__('Customer Name')) ?></p>
             <select name="customer_id" class="customer_id admin__control-select">
+                <option disabled selected><?= $block->escapeHtml(__('Select Customer')) ?></option>
+                <?php foreach ($block->getCustomersFullName() as $customerId => $customerName): ?>
+                    <option value="<?= $block->escapeHtmlAttr(__($customerId)) ?>"><?= $block->escapeHtml(__($customerName)) ?></option>
+                <?php endforeach; ?>
+            </select>
+        <?php elseif ($block->getOptionType() === 'password_reset'): ?>
+            <p class="select_name"><?= $block->escapeHtml(__('Customer Name')) ?></p>
+            <select name="password_reset" class="password_reset admin__control-select">
                 <option disabled selected><?= $block->escapeHtml(__('Select Customer')) ?></option>
                 <?php foreach ($block->getCustomersFullName() as $customerId => $customerName): ?>
                     <option value="<?= $block->escapeHtmlAttr(__($customerId)) ?>"><?= $block->escapeHtml(__($customerName)) ?></option>
